docs: separate speech module status and dependencies in main configuration

--- a/environment.yml
+++ b/environment.yml
@@ -39,7 +39,7 @@ dependencies:
     # 异步支持
     - aiofiles>=23.0.0
     
-    # 语音合成相关 (任务三 - 按需取消注释)
+    # 语音合成相关 (任务三)
     - librosa>=0.10.0
     - soundfile>=0.12.0
     - ChatTTS
