--- a/config/llm_config.json
+++ b/config/llm_config.json
@@ -2,7 +2,7 @@
     "config_list": [
         {
             "model": "deepseek-chat",
-            "api_key": "sk-f02f3d0ab82a4a9f9e252b1bec2e99e5",
+            "api_key": "",
             "base_url": "https://api.deepseek.com/v1"
         }
     ],
